change img path

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet">
-
-    <!-- <link
-            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
-            rel="stylesheet" /> -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -70,25 +66,7 @@
                     Login
                   </button></li>
               </ul>
-
-
             </div>
-
-
-            <!-- <div class="nav_lang">
-              <select>
-                <option>Hi, &#xf042;</option>
-                <option>Hi, &#xf043;</option>
-                <option>Hi, &#xf044;</option>
-                <option>Hi, &#xf045;</option>
-                <option>Hi, &#xf046;</option>
-              </select>
-            </div> -->
-            <!-- <div class="nav_login-btn">
-              <button class="nav-btn">
-                Login
-              </button>
-            </div> -->
           </div>
           <div class="hamburger">
             <span class="bar"></span>
@@ -122,7 +100,7 @@
         <div class="header-img">
 
           <img class="header_img"
-            src="/images/adeel.png"
+            src="images/adeel.png"
             alt="img not found">
         </div>
       </div>
@@ -145,7 +123,6 @@
               venenatis, ut gravida sociis quis donec.
               Malesuada vehicula nibh enim nec, imperdiet
               lectus imperdiet. Magna nisi.
-
             </p>
           </div>
         </div>
@@ -161,7 +138,6 @@
               <h2 class="card_heading">
                 Customisable to suit your needs
               </h2>
-
             </div>
             <div class="card-custom_p">
               <p class="para_b">
@@ -172,8 +148,6 @@
                 donec pellentesque pretium ante
               </p>
             </div>
-
-
           </div>
           <!-- card 2 -->
           <div class="main-why-card-setup align-card card">
@@ -195,7 +169,6 @@
                 donec pellentesque pretium ante
               </p>
             </div>
-
           </div>
           <!-- card 3 -->
           <div class="main-why-card-secure card">
@@ -241,12 +214,11 @@
               <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
-                  <div class="role-own_icon active_i">
+                  <div class="role-own_icon school-icon">
                     <img class="role-own_icon_img" src="images/rule_own.svg"
                       alt="not
                       found">
-                    <!-- <svg src="images/rule_own.svg"
-                                            style="margin-top: 10px;"></svg> -->
+
                   </div>
                   <div class="role-own_name">
                     <h4 class="name_heading">School Owner</h4>
@@ -254,7 +226,7 @@
                 </div>
                 <!-- teacher -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon teacher-icon">
                     <img src="images/rule_teacher.svg"
                       alt="not
                       found">
@@ -265,7 +237,7 @@
                 </div>
                 <!-- parents -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon parent-icon">
                     <img src="images/rule_parent.svg"
                       alt="not
                       found">
@@ -276,7 +248,7 @@
                 </div>
                 <!-- student -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon student-icon">
                     <img src="images/rule_student.svg"
                       alt="not
                       found">
@@ -306,7 +278,6 @@
                       arcu, purus dictum ac dictumst in
                       quis.
                       Integer.
-
                     </p>
                   </div>
                 </div>
@@ -403,11 +374,10 @@
               <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
-                  <div class="role-own_icon active_i">
+                  <div class="role-own_icon school-icon">
                     <img src="images/rule_own.svg" alt="not
                       found">
-                    <!-- <svg src="images/rule_own.svg"
-                                            style="margin-top: 10px;"></svg> -->
+
                   </div>
                   <div class="role-own_name">
                     <h4 class="name_heading">School Owner</h4>
@@ -415,7 +385,7 @@
                 </div>
                 <!-- teacher -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon teacher-icon">
                     <img src="images/rule_teacher.svg"
                       alt="not
                       found">
@@ -426,7 +396,7 @@
                 </div>
                 <!-- parents -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon parent-icon">
                     <img src="images/rule_parent.svg"
                       alt="not
                       found">
@@ -437,7 +407,7 @@
                 </div>
                 <!-- student -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon student-icon">
                     <img src="images/rule_student.svg"
                       alt="not
                       found">
@@ -546,8 +516,6 @@
             </div>
           </div>
         </div>
-
-
         <!-- fee management -->
         <div class="main-role-manage">
           <div class="main-role-manage-heading">
@@ -562,11 +530,10 @@
               <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
-                  <div class="role-own_icon active_i">
+                  <div class="role-own_icon school-icon">
                     <img src="images/rule_own.svg" alt="not
                       found">
-                    <!-- <svg src="images/rule_own.svg"
-                                            style="margin-top: 10px;"></svg> -->
+
                   </div>
                   <div class="role-own_name">
                     <h4 class="name_heading">School Owner</h4>
@@ -574,7 +541,7 @@
                 </div>
                 <!-- teacher -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon teacher-icon">
                     <img src="images/rule_teacher.svg"
                       alt="not
                       found">
@@ -585,7 +552,7 @@
                 </div>
                 <!-- parents -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon parent-icon">
                     <img src="images/rule_parent.svg"
                       alt="not
                       found">
@@ -596,7 +563,7 @@
                 </div>
                 <!-- student -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon student-icon">
                     <img src="images/rule_student.svg"
                       alt="not
                       found">
@@ -697,11 +664,10 @@
               <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
-                  <div class="role-own_icon active_i">
+                  <div class="role-own_icon school-icon">
                     <img src="images/rule_own.svg" alt="not
                       found">
-                    <!-- <svg src="images/rule_own.svg"
-                                            style="margin-top: 10px;"></svg> -->
+
                   </div>
                   <div class="role-own_name">
                     <h4 class="name_heading">School Owner</h4>
@@ -709,7 +675,7 @@
                 </div>
                 <!-- teacher -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon teacher-icon">
                     <img src="images/rule_teacher.svg"
                       alt="not
                       found">
@@ -720,7 +686,7 @@
                 </div>
                 <!-- parents -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon parent-icon">
                     <img src="images/rule_parent.svg"
                       alt="not
                       found">
@@ -731,7 +697,7 @@
                 </div>
                 <!-- student -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon student-icon">
                     <img src="images/rule_student.svg"
                       alt="not
                       found">
@@ -856,11 +822,10 @@
               <div class="main-role-manage-own">
                 <!-- own -->
                 <div class="role-own">
-                  <div class="role-own_icon active_i">
+                  <div class="role-own_icon school-icon">
                     <img src="images/rule_own.svg" alt="not
                       found">
-                    <!-- <svg src="images/rule_own.svg"
-                                            style="margin-top: 10px;"></svg> -->
+
                   </div>
                   <div class="role-own_name">
                     <h4 class="name_heading">School Owner</h4>
@@ -868,7 +833,7 @@
                 </div>
                 <!-- teacher -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon teacher-icon">
                     <img src="images/rule_teacher.svg"
                       alt="not
                       found">
@@ -879,7 +844,7 @@
                 </div>
                 <!-- parents -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon parent-icon">
                     <img src="images/rule_parent.svg"
                       alt="not
                       found">
@@ -890,7 +855,7 @@
                 </div>
                 <!-- student -->
                 <div class="role-own">
-                  <div class="role-own_icon">
+                  <div class="role-own_icon student-icon">
                     <img src="images/rule_student.svg"
                       alt="not
                       found">
@@ -1108,7 +1073,7 @@
       <div class="footer-container">
         <div class="footer-logo-content-socail">
           <div class="footer-logo">
-            <a href="#"> <img src="/images/logo.svg" alt="not
+            <a href="#"> <img src="images/logo.svg" alt="not
                 found"></a>
           </div>
           <div class="footer-content">
