--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="main-role-manage-own-content">
               <div class="main-role-manage-own">
                 <!-- own -->
-                <div class="role-own role-own-attendance-scl">
+                <div class="role-own">
                   <div class="role-own_icon school-icon">
                     <img class="role-own_icon_img" src="images/rule_own.svg"
                       alt="not
@@ -236,7 +236,7 @@
                   </div>
                 </div>
                 <!-- parents -->
-                <div class="role-own role-own-attendance-par">
+                <div class="role-own">
                   <div class="role-own_icon parent-icon">
                     <img src="images/rule_parent.svg"
                       alt="not
@@ -247,7 +247,7 @@
                   </div>
                 </div>
                 <!-- student -->
-                <div class="role-own role-own-attendance-stu">
+                <div class="role-own">
                   <div class="role-own_icon student-icon">
                     <img src="images/rule_student.svg"
                       alt="not
@@ -265,9 +265,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -284,9 +284,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -303,9 +303,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -321,9 +321,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -339,9 +339,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -424,9 +424,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -440,9 +440,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -459,9 +459,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -477,9 +477,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -495,9 +495,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -579,9 +579,9 @@
               <div class="main-role-manage-content">
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -599,9 +599,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -614,9 +614,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -629,9 +629,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -713,9 +713,9 @@
               <div class="main-role-manage-content">
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -733,9 +733,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -752,9 +752,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -769,9 +769,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -785,9 +785,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -871,9 +871,9 @@
               <div class="main-role-manage-content">
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -891,9 +891,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -910,9 +910,9 @@
 
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -928,9 +928,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
@@ -946,9 +946,9 @@
                 </div>
                 <div class="role-content">
                   <div class="role-content-icon">
-                    <!-- <img src="images/arrow-right.svg"
+                    <img src="images/arrow-right.svg"
                       alt="not
-                      found"> -->
+                      found">
                   </div>
                   <div class="role-content-text">
                     <p class="para_b">
