--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                             <!-- teacher content  -->
                             <div id="Teacher" class="main-role-manage-content">
@@ -458,7 +458,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                             <!-- parent content  -->
                             <div id="Parents" class="main-role-manage-content">
@@ -554,7 +554,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                             <!-- students content  -->
                             <div id="Students" class="main-role-manage-content">
@@ -631,7 +631,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                         </div>
                     </div>
@@ -892,7 +892,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                             <!-- teacher content  -->
                             <div id="Teacher" class="main-role-manage-content
@@ -984,7 +984,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                             <!-- parent content  -->
                             <div id="Parents" class="main-role-manage-content
@@ -1081,7 +1081,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                             <!-- students content  -->
                             <div id="Students" class="main-role-manage-content
@@ -1159,7 +1159,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
 
                         </div>
@@ -1295,7 +1295,7 @@
                                     </div>
                                 </div>
 
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                         </div>
                     </div>
@@ -1451,7 +1451,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                         </div>
                     </div>
@@ -1615,7 +1615,7 @@
                                     </div>
 
                                 </div>
-                                <button class="role_learn_more">Learn More</button>
+                                <div class="role_learn_more">Learn More</div>
                             </div>
                         </div>
                     </div>
